--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -236,6 +236,7 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
+                        <li><a routerLink="/twilio/sub-account"><i class="fa fa-list"></i> Twilio Sub-accounts</a></li>
                         <li><a routerLink="/twilio/create"><i class="fa fa-circle-o"></i> Create</a></li>
                         <li><a routerLink="/twilio/list"><i class="fa fa-circle-o"></i> List</a></li>
                     </ul>
