change environment for dev server

--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
@@ -38,9 +38,9 @@
                                         <tr role="row">
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">
-                                                Fristname
+                                                First Name
                                             </th>
-                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Lastname
+                                            <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Last Name
                                             </th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Company
                                             </th>
