--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.css
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.css
@@ -33,6 +33,8 @@
     float: right;
     margin: -27px 10px 0 0;
     cursor: pointer;
+    display:inline-block;
+    position: relative;
 }
 .createAgentBtn{
     padding-top: 29px;
