--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.css
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.css
@@ -1,5 +1,15 @@
 @media screen and (max-width:1024px){
     .box{
       overflow-x: scroll;
-  }  
   }
+  }
+.searchbox{
+  margin-bottom: 20px;
+  border-radius: 20px;
+  border: 1px solid #3c8dbc;
+  box-shadow: 0px 0px 4px 1px #3c8dbc75;
+  width: 40%;
+  height: 40px;
+  outline: none;
+  padding: 20px;
+}
