--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -19,9 +19,8 @@
                         <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    Search : <input [(ngModel)]="term" placeholder="All fields">
+                                    Search : <input [(ngModel)]="term" placeholder="All fields" class="searchbox">
                                 </div>
-                                <div class="col-sm-6"></div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
