--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.css
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.css
@@ -188,3 +188,14 @@ input:checked + .sliderPhone:after
     float: right;
   }
 }
+.newbutton{
+  height: 46px;
+  margin-top: -4px;
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 1716px) and (min-width: 768px){
+  .createAgentBtn{
+    width:100% !important;
+  }
+}
