--- a/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.css
+++ b/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.css
@@ -18,6 +18,7 @@ h2{
 .chat-list{
   display: inline-block;
   width: 100%;
+  padding-left: 20px;
 }
 .chat-list ul{
   margin: 5px 0 0;
@@ -166,7 +167,6 @@ ul.super-sub li:hover{background: #e1e3e9;}
   cursor: not-allowed;
   pointer-events: none;
 }
-
 @media screen and (max-width:768px){
   .direct-chat-messages {
     height: 300px;
