--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.css
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.css
@@ -35,10 +35,13 @@ input[type=file] {
     width: 100%;
     max-height: 200px;
     overflow-y: scroll;
-    box-shadow: 0 3px 5px rgba(0,0,0,0.3);
-    border: 1px solid #e2e2e2;
     z-index: 99;
     padding: 0;
+}
+.newbutton{
+  height: 46px;
+  margin-top: -4px;
+  font-size: 18px;
 }
 .autoList li{
     list-style: none;
@@ -127,4 +130,13 @@ input[type=file] {
 .checkbox label input[type="checkbox"]:disabled + .cr,
 .radio label input[type="radio"]:disabled + .cr {
   opacity: .5;
+}
+
+@media only screen and (max-width: 1716px) and (min-width: 768px){
+  .createAgentBtn{
+    width:100% !important;
+  }
+}
+@media only screen and (max-width: 477px) and (min-width: 320px){
+
 }
