--- a/src/app/core/shared/spinner/spinner.component.css
+++ b/src/app/core/shared/spinner/spinner.component.css
@@ -10,7 +10,7 @@
 
 .loadingDiv{
   z-index: 99999;
-  position: absolute;
+  position: fixed;
   height: 100%;
   width: 100%;
   display: flex;
@@ -18,3 +18,5 @@
   align-items: center;
   background-color: rgba(99, 122, 145, 0.6);
 }
+
+
